Fix bug with last room not showing complete

--- a/src/ui/styles/forms.css
+++ b/src/ui/styles/forms.css
@@ -112,9 +112,6 @@ a {
 		align-items: center;
 	}
 
-	& :is(p) {
-		font-size: smaller;
-	}
 	& :is(input) {
 		margin-right: auto;
 		padding: 0.25rem;
